# DisPinMap

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENTS.md  AGENT_TASKS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FRESH_DATABASE_DEPLOYMENT.md  GCP_DEPLOYMENT_TASKS.md  LOCAL_DEV_PLAN.md  MONITOR_IMPROVEMENTS_SUMMARY.md  README.md  REMAINING_TASKS.md  SCHEMA_REDESIGN_PLAN.md  TESTING_REFACTOR_PLAN.md  USER_DOCUMENTATION.md  alembic.ini  bot.py  codecov.yml  conftest.py  containerize.md  database.py  litestream.yml  local_dev.py  project-lessons.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  simulation_results_20250620_173301.json  startup.sh  terraform.tfvars  test_cli.py  test_migration.lz4  (+2 more)
.claude/: implementation_notes.md  settings.json  simulation_plan.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: claude.yml  fixture-validation.yml  lint.yml  python-tests.yml
.serena/: project.yml
alembic/: CLAUDE.md  env.py
alembic/versions/: 5c8e4212f5ed_rename_target_data_to_location_id_and_.py  68d948f60b7a_establish_baseline_from_production_.py  9275fe03c648_create_initial_baseline_from_new_schema.py  c89aa1e6a04d_create_initial_baseline_from_new_schema.py  ea2a9d9df2f0_set_is_active_default_to_true_on_.py
docs/: CLAUDE.md  DATABASE.md  DEVELOPER_HANDBOOK.md  DEVELOPER_HANDBOOK_MIGRATION_BACKUP.md  LOCAL_DEVELOPMENT.md  current-tasks.md  deployment-guide.md  development-guide.md  enhanced-testing-strategy.md  product-specifications.md  simulation-testing-framework.md
docs/issues/: 1-bug-seen-submission-race-condition.md  1-bug-startup-duplicate-notifications.md  2-bug-console-interface-limited-commands.md  2-bug-timezone-handling-inconsistency.md  2-feature-monitoring-loop-debug-logging.md  CLAUDE.md
migrations/: add_notification_types.py
scripts/: CLAUDE.md  capture_api_responses.py  ci_fixture_validation.yml  cleanup-completed-worktree.sh  complete-subagent-task.sh  create-feature-worktree.sh  create-subagent-worktree.sh  download_production_db.py  list-subagent-tasks.sh  run_all_checks.sh  run_all_validations.py  send_command.sh  setup_test_cities.py  sync-all-worktrees.sh  validate_fixtures.py  validate_litestream.py
src/: CLAUDE.md  __init__.py  api.py  commands.py  console_discord.py  database.py  file_watcher.py  local_dev.py  local_logging.py  log_config.py  main.py  messages.py  models.py  models_new.py  monitor.py  notifier.py
src/cogs/: command_handler.py  config.py  monitor.py  monitoring.py  runner.py
src/local_dev/: CLAUDE.md  __init__.py  console_discord.py  file_watcher.py  local_dev.py  local_logging.py
terraform/: .terraform.lock.hcl  CLAUDE.md  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
test/: __init__.py  test_api_edge_cases.py  test_database_edge_cases.py  test_database_postgres.py  test_geocoding.py  test_location_add.py  test_location_add_functional.py  test_logging_flow.py  test_poll_rate_functional.py  test_poll_rate_new.py  test_simulation.py  test_utils.py
tests/: CLAUDE.md  README.md  conftest.py  utils.py
tests/enhanced/: test_integration_background_tasks.py  test_message_formatting_issues.py  test_simulation_framework_analysis.py  test_task_loop_failures.py
tests/fixtures/api_responses/: index.json
tests/fixtures/api_responses/geocoding/: city_chicago.json  city_chicago_il.json  city_invalidcityname123.json  city_los_angeles_ca.json  city_new_york_ny.json  city_nonexistent.json  city_nonexistent_city_xx.json  city_portland.json  city_portland_or.json  city_seattle.json  city_seattle_wa.json
tests/fixtures/api_responses/pinballmap_locations/: location_1309_details.json  location_1337_details.json  location_1_details.json  location_2_details.json  location_874_details.json  location_999999_details.json
tests/fixtures/api_responses/pinballmap_search/: search_dave_and_busters.json  search_ground_kontrol_single_result.json  search_nonexistent_location_name.json  search_pin.json  search_seattle.json
tests/fixtures/api_responses/pinballmap_submissions/: coords_seattle_5mi_all.json  coords_seattle_5mi_recent.json  coords_seattle_center_all.json  coords_seattle_center_recent.json  coords_times_square_10mi_all.json  coords_times_square_10mi_recent.json  location_1309_recent.json  location_1_all.json  location_1_recent.json  location_2_all.json  location_2_recent.json  location_874_empty.json  location_874_recent.json
tests/func/: test_commands.py  test_monitor_task_loop_lifecycle.py
tests/integration/: __init__.py  test_api_contracts.py  test_commands_e2e.py  test_commands_integration.py  test_database_crud.py  test_geocoding_api_integration.py  test_monitoring_e2e.py  test_monitoring_resilience.py  test_pinballmap_api.py  test_runner_e2e.py
tests/migration/: test_data_transformation.py  test_new_schema.py
tests/simulation/: __init__.py  demo_simulation.py  test_user_journeys.py
tests/unit/: __init__.py  test_add_target_behavior.py  test_api.py  test_api_client.py  test_automatic_poll_behavior.py  test_command_handler.py  test_commands_parsing.py  test_config_cog.py  test_database.py  test_database_models.py  test_geocoding_api.py  test_log_config.py  test_logging.py  test_main.py  test_manual_check_behavior.py  test_message_formatting.py  test_monitor.py  test_monitoring_cog.py  test_notifier.py  test_schema_validation.py
tests/utils/: __init__.py  api.py  api_mock.py  api_mocker.py  assertions.py  database.py  db_helpers.py  db_utils.py  discord_mock.py  generators.py  helpers.py  llm_assertions.py  mock_factories.py  simulation.py  time_mock.py
