[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pinball_map_bot"
version = "0.1.0"
description = "A Discord bot to monitor pinballmap.com for machine changes."
authors = [
    {name = "Froeht", email = "froeht@users.noreply.github.com"},
]
requires-python = ">=3.9"
dependencies = [
    "discord.py",
    "requests",
    "python-dotenv",
    "sqlalchemy>=2.0.0",
    "google-cloud-secret-manager",
    "cloud-sql-python-connector[pg8000]",
    "aiohttp",
    "colorama",
]

[project.scripts]
"pinball-bot" = "src.main:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "pytest-cov",
    "flake8",
    "black",
    "isort",
    "mypy",
    "types-requests",
    "pre-commit",
]

[tool.setuptools]
packages = ["src"]
# If you have packages in subdirectories of src, use:
# packages = find_packages(where="src")

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
combine_as_imports = true
known_first_party = ["src"]
known_third_party = ["discord", "requests", "sqlalchemy", "pytest", "aiohttp", "colorama", "google"]
skip_glob = ["migrations/*"]

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
explicit_package_bases = true
mypy_path = "."
exclude = [
    "migrations/.*",
    ".venv/.*",
    "build/.*",
    "dist/.*",
    "alembic/.*"
]

[[tool.mypy.overrides]]
module = [
    "discord.*",
    "google.cloud.secretmanager",
    "cloud_sql_python_connector.*",
    "pg8000.*",
    "tests.utils.*",
    "setuptools.*",
    "colorama.*",
    "notifier"
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = [
    "src/__init__.py",
    "tests/*",
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    ".venv/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false
sort = "Cover"

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
